# spline_interpolation

./: .gitignore  CMakeLists.txt
include/: spline_interpolation.hpp
output/: spline.txt  trajectory.txt
scripts/: plot.py
src/: spline.cpp  spline_interpolation.cpp
